--- a/views/edit_album.erb
+++ b/views/edit_album.erb
@@ -11,6 +11,15 @@
       <label for="name">Rename Album</label>
       <input type="text" name="name" id="name">
 
+      <label for="year">Change Album Year</label>
+      <input type="text" name="year" id="year">
+
+      <label for="genre">Change Genre</label>
+      <input type="text" name="genre" id="genre">
+
+      <label for="artist">Change Album Artist</label>
+      <input type="text" name="artist" id="artist">
+
       <button type="submit">Update</button>
     </form>
     <p><a href="/albums">Return to Album List</a></p>
