--- a/views/new_album.erb
+++ b/views/new_album.erb
@@ -13,7 +13,16 @@
 
     <label for="album_name">Album name</label>
     <input id="n" name="album_name" class="form-control" type="text">
-    
+
+    <label for="album_year">Album Year</label>
+    <input id="n" name="album_year" class="form-control" type="text">
+
+    <label for="album_genre">Album Genre</label>
+    <input id="n" name="album_genre" class="form-control" type="text">
+
+    <label for="album_artist">Album Artist</label>
+    <input id="n" name="album_artist" class="form-control" type="text">
+
   </div>
 
   <button type="submit" class="btn">Go!</button>
