adds sold method to Record Store.

--- a/views/album.erb
+++ b/views/album.erb
@@ -11,5 +11,11 @@
     <h4>Album Artist: <%= @album.artist%></h4>
     <p><a href="/albums/<%= @album.id %>/edit">Edit Album</a></p>
     <a href="/albums">Return to Album List</a>
+
+    <form action="/albums/<%= @album.id()%>" method="post">
+      <input type="hidden" name="_method" value="patch">
+
+      <button type="submit">Buy Album</button>
+    </form>
   </body>
 </html>
