--- a/views/album.erb
+++ b/views/album.erb
@@ -9,6 +9,30 @@
     <h4>Album Year: <%= @album.year%></h4>
     <h4>Album Genre: <%= @album.genre %></h4>
     <h4>Album Artist: <%= @album.artist%></h4>
+
+
+<h3>Album Songs</h3>
+
+  <% if @album.songs %>
+    <ul>
+      <% @album.songs.each do |song| %>
+        <li><a href="/albums/<%= @album.id %>/songs/<%= song.id %>"><%= song.name %></a></li>
+      <% end %>
+    </ul>
+  <% else %>
+    <p>There are no songs listed for this album yet.</p>
+  <% end %>
+
+<h4>Add a song:</h4>
+
+<form action="/albums/<%= @album.id %>/songs" method="post">
+  <div class="form-group">
+    <label for="song_name">Song name</label>
+    <input id="song_name" name="song_name" class="form-control" type="text">
+  </div>
+  <button type="submit" class="btn">Add song</button>
+</form>
+
     <p><a href="/albums/<%= @album.id %>/edit">Edit Album</a></p>
     <a href="/albums">Return to Album List</a>
 
