--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,14 +3,15 @@
   <head>
     <title>All Sales Vinyl</title>
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css'>
-  <link rel="stylesheet" href="/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Lilita+One&display=swap" rel="stylesheet">
+
+    <link rel='stylesheet' href='/styles.css'>
   </head>
   <body>
-
-    <div class="jumbotron">
-
-    </div>
     <div class="container">
+      <div class="jumbotron">
+        <h1><center>All-Sales-Vinyl</center></h1>
+      </div>
       <%= yield %>
     </div>
   </body>
